maint: remove lazy loading tag to see if it fixes iphone layout issue for gallery page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,6 +805,18 @@ textarea {
         display: block;
     }
 
+    legend {
+        font-size: 18px;
+    }
+
+    #submitbtn {
+        font-size: 12px;
+    }
+    
+    #resetbtn {
+        font-size: 12px;
+    }
+
     .menubox {
         width: 40%;
     }
